# MSc_Geomatics_Thesis_3D_alpha_wrap

./: .gitignore  .gitmodules  3D_alpha_wrap.cpp  CMakeLists.txt  README.md
Code/: README.md
Report/: README.md
cgal_override/CGAL/Alpha_wrap_3/internal/: Alpha_wrap_3.h
src/: MAT.cpp  MAT.h  alpha_wrap.cpp  alpha_wrap.h  edge_refinement.cpp  edge_refinement.h  hausdorff.cpp  hausdorff.h  main.cpp  octree.cpp  octree.h  val3dity.cpp  val3dity.h
src/cgal_override/CGAL/: alpha_wrap_3.h
src/cgal_override/CGAL/Alpha_wrap_3/internal/: Alpha_wrap_3.h  Feature_size_MAT.h  Octree_refinement_depth.h  Oracle_base.h  Triangle_mesh_oracle.h  is_concave.h
